Revert "[KOGITO-8207] Changed type of SourceFile#contents to byte[]"
This reverts commit b356291102fd9c51182375a1c24bb935c2b3ee3a.